src/test/deca/context/valid/provided/test_New_class_extended.deca
class B{}
class A extends B{}


{
    B a =  new A();
}