src/test/deca/context/invalid/provided/access-invalid-field.deca
class A{
    int x;

    int getY(){
        return y;
    }
}
